[package]
name = "tess"
version = "0.1.0"
edition = "2024"

[features]
default = ["blst"]
blst = []
ark_bls12381 = ["ark-bls12-381", "ark-ff", "ark-ec", "ark-poly", "ark-serialize"]
ark_bn254 = ["ark-bn254", "ark-ff", "ark-ec", "ark-poly", "ark-serialize"]

[dependencies]
ark-bls12-381 = { version = "0.5", optional = true }
ark-bn254 = { version = "0.5", optional = true }
ark-ec = { version = "0.5", optional = true }
ark-ff = { version = "0.5", optional = true }
ark-poly = { version = "0.5", optional = true }
ark-serialize = { version = "0.5", optional = true }
ark-std = { version = "0.5", features = ["print-trace"], optional = true }
blake3 = "1.5"
blstrs = "0.7"
ff = "0.13"
group = "0.13"
pairing = "0.23"
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
rayon = { version = "1.10", optional = false }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "threshold_bench"
path = "benches/threshold_bench.rs"
harness = false
